- Updated Neon version from 1.10.1 to 1.11-pre_1 - Migration build tool from Maven to Gradle - Updated gitignore - Updated Java version from 16 to 17 - Updated Kotlin version to 2.0.20 - Updated kotlin coroutine version to 1.9.0 - Added database required libraries - Improved usage dependency injection with Koin annotation
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-/out
-/Neon-Kotlin/target
-/Builds
-/Neon-Kotlin/SpecialSource
-/.idea
-/NMS-Snapshot
-/Neon-Kotlin/ExcludedFiles/*
+/tools
+/local.properties
+/out/*
+/Neon-Kotlin/target/*
+/Neon-Database-Extension/target/*
+/builds
+/Neon-Kotlin/SpecialSource/*
+/.idea/*
+/nms-snapshot/*
+/Neon-Kotlin/Misc/*
+/Neon-Kotlin/build/*
+/Neon-Kotlin/.kotlin/*
+/Neon-Kotlin/.gradle/*
