--- a/Neon-Database-Extension/pom.xml
+++ b/Neon-Database-Extension/pom.xml
@@ -162,6 +162,11 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+
+        <repository>
+            <id>redgate</id>
+            <url>https://download.red-gate.com/maven/release</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -238,6 +243,20 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.redgate.flyway</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>10.17.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-hsqldb</artifactId>
+            <version>10.17.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Other library -->
         <dependency>
             <groupId>io.insert-koin</groupId>
@@ -271,6 +290,24 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.17.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -359,9 +396,7 @@
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <finalName>${artifactId}</finalName>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
-                                    <resource>.txt</resource>
-                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                             <!--                            <filters>-->
                             <!--                                <filter>-->
