- Updated .env template - Improvement on loading NMS mapping
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/Neon-Database-Extension/src/main/resources/application/.env.template
+++ b/Neon-Database-Extension/src/main/resources/application/.env.template
@@ -3,3 +3,11 @@ DATABASE_USERNAME={USERNAME}
 DATABASE_PASSWORD={PASSWORD}
 DATABASE_ADDRESS={ADDRESS}
 DATABASE_PORT={PORT}
+DATABASE_DRIVER={DRIVER_CLASS_NAME}
+DATABASE_SCHEMA={DEFAULT_DATABASE_SCHEMA}
+
+# Database update config
+DATABASE_UPDATE_SCRIPTS_LOCATION={UPDATE_SCRIPTS_LOCATION}
+FLYWAY_SQL_MIGRATION_PREFIX={PREFIX}
+FLYWAY_SQL_MIGRATION_SEPARATOR={SEPARATOR}
+FLYWAY_LOGGER={LOGGER_TYPE}
