- Moved `nFile` out from pre-init loading stage due its high priority before loading extensions - Moved some server properties fields from `AppInitializer`to the `AppContext` - `nFile` init will be done follow by extension extraction during the `AppInitializer` being initialized - Moved color palette used by the neon start/end title to a separated class - Added a log when the database connect has been successfully established - Added a `NeonAPI` class which expose all the required function to the extension - Updated imports - Updated `AppContext` & `AppInitializer` run order - Removed older folder init function - Added missing nms mapping - Updated pom for `Neon-Database-Extension` - Updated extension loading will be run after the extraction
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/Neon-Database-Extension/pom.xml
+++ b/Neon-Database-Extension/pom.xml
@@ -175,7 +175,8 @@
             <groupId>com.islandstudio</groupId>
             <artifactId>Neon-Kotlin</artifactId>
             <version>original</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../Neon-Kotlin/build/libs/neon-kotlin.jar</systemPath>
         </dependency>
 
         <!-- Kotlin core -->
