- Updated and improved on dependency injection using Koin - Updated dependency file path for `neon-database-server` - Renamed `neon_database` to `neon_database_server` in `code-messages.properties` - Renamed `code_messages.properties` file name - Removed test code in db script
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/neon-database-server/src/main/resources/application/code-messages.properties
+++ b/neon-database-server/src/main/resources/application/code-messages.properties
@@ -1,8 +1,8 @@
-neon_database.error.db_server_start_failed = Database server could not start properly! Please perform a full server restart!
-neon_database.error.db_connection_failed = Failed to establish connection to the Neon Database!
-neon_database.error.no_db_bound = Database not bound to the datasource!
+neon_database_server.error.db_server_start_failed = Database server could not start properly! Please perform a full server restart!
+neon_database_server.error.db_connection_failed = Failed to establish connection to the Neon Database!
+neon_database_server.error.no_db_bound = Database not bound to the datasource!
 
-neon_database.warning.neon_not_running = Neon plugin is not running! Neon database initialization has been cancalled!
+neon_database_server.warning.neon_not_running = Neon plugin is not running! Neon database initialization has been cancalled!
 
-neon_database.info.db_connection_success = Connection to the Neon Database establish successfully!
-neon_database.info.db_server_start_success = Database server has started!
+neon_database_server.info.db_connection_success = Connection to the Neon Database establish successfully!
+neon_database_server.info.db_server_start_success = Database server has started!
