- Added function to get formatted code message - Updated some of the code message
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/neon-kotlin/src/main/resources/application/code-messages.properties
+++ b/neon-kotlin/src/main/resources/application/code-messages.properties
@@ -1,8 +1,15 @@
 # Info
-neon.info.preinit.start_preinit_message = Start filling up Neon......
+neon.info.pre_init.start = Start filling up Neon......
+neon.info.pre_init.processing = Filling up Neon......%d%%
+neon.info.pre_init.complete = Neon has been filled up!
+neon.info.post_init.start = Start lighting up Neon.....
+neon.info.post_init.processing = Lighting up Neon......%d%%
+neon.info.post_init.complete = Neon has been lit up!
+
 neon.info.type.db_connection_success = Connection to the Neon Database establish successfully!
 
 # Error
-neon.error.preinit.incompatible_version = Neon could not be filled up: Incompatible server version!
+neon.error.pre_init.incompatible_version = Neon could not be filled up: Incompatible server version!
+neon.error.post_init.incompatible_version = Neon could not be lit up: Incompatible server version!
 
 # Warning
