--- a/neon-kotlin/src/main/resources/application/code-messages.properties
+++ b/neon-kotlin/src/main/resources/application/code-messages.properties
@@ -6,6 +6,10 @@ neon.info.post_init.start = Start lighting up Neon.....
 neon.info.post_init.processing = Lighting up Neon......%d%%
 neon.info.post_init.complete = Neon has been lit up!
 
+neon.info.resource_manager.data_folder_init = Initializing data folder......
+neon.info.resource_manager.extension_init = Verifying and extracting extension......
+neon.info.resource_manager.extension_extract_failed = Missing extension source! Skipping extension extration for '%s' ......
+
 neon.info.type.db_connection_success = Connection to the Neon Database establish successfully!
 
 # Error
