- Added server major version - Excluding the `.env.template` from the build - Resolved a typo for `sendCommandSyntax` - Added a note in `database-config.yml` to notify that the backup feature is not available yet - Migrated `nFile` previous functionalities to `NeonDataFolder` - Added `Version` folder object - Resolved a typo for command syntax prefix - Removed unused debug logic for `debug` command - Update method usage for event processor registration - Resolved an issue where category mismatch in the nms mapping file - Added @Single annotation to `NPlayerProfile` and changed to class type - Added a check to prevent duplicate player profile occur - Revolved `nPlayerProfile` not able to perform dependency injection within its event processor - Added a reload notification to serverfeature remastered console execution - Resolved a typo to the permission name - Resolved an error for sql query in role access - Resolved an error for `updatePlayerRecipe`
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/neon-database-server/src/main/resources/database-config.yml
+++ b/neon-database-server/src/main/resources/database-config.yml
@@ -6,6 +6,8 @@ NeonDatabase:
   # The indicator (-Online/-Offline) used to differeciate between server running in Online Mode or Offline Mode
   # Server reload needed to apply the changes.
   isGlobal: true
+
+  # NOTE: Backup not available yet
   backup:
     isEnabled: true
     # Backup once after server initialized (Startup / Reload)
