- `NeonResource` separated into 2 category, internal & external - Added code messages for database connection - Rearranged initialization sequence for some component
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/neon-kotlin/src/main/resources/application/code-messages.properties
+++ b/neon-kotlin/src/main/resources/application/code-messages.properties
@@ -10,7 +10,10 @@ neon.info.resource_manager.data_folder_init = Initializing data folder......
 neon.info.resource_manager.extension_init = Verifying and extracting extension......
 neon.info.resource_manager.extension_extract_failed = Missing extension source! Skipping extension extration for '%s' ......
 
-neon.info.type.db_connection_success = Connection to the Neon Database establish successfully!
+neon.info.database.connecting_to_db_server = Establishing connection to Neon Database Server......
+neon.info.database.disconnecting_from_db_server = Disconnecting from Neon Database Server.....
+neon.info.database.db_connection_success = Connection to the Neon Database Server established successfully!
+neon.info.database.db_disconnection_success = Connection to the Neon Database Server disconneted successfully!
 
 # Error
 neon.error.pre_init.incompatible_version = Neon could not be filled up: Incompatible server version!
