--- a/neon-kotlin/neon-shared/src/main/resources/application/code-messages.properties
+++ b/neon-kotlin/neon-shared/src/main/resources/application/code-messages.properties
@@ -1,10 +1,9 @@
 # Info
-neon.info.pre_init.start = Start filling up Neon......
-neon.info.pre_init.processing = Filling up Neon......%d%%
-neon.info.pre_init.complete = Neon has been filled up!
-neon.info.post_init.start = Start lighting up Neon.....
-neon.info.post_init.processing = Lighting up Neon......%d%%
-neon.info.post_init.complete = Neon has been lit up!
+neon.info.pre_load.start = Start filling up Neon......
+neon.info.pre_load.complete = Neon has been filled up!
+neon.info.post_load.start = Start lighting up Neon.....
+neon.info.post_load.complete = Neon has been lit up!
+neon.info.apploader.version_check = Checking version compatibility......
 
 neon.info.resource_manager.data_folder_init = Initializing data folder......
 neon.info.resource_manager.extension_init = Verifying and extracting extension......
@@ -16,7 +15,6 @@ neon.info.database.db_connection_success = Connection to the Neon Database Serve
 neon.info.database.db_disconnection_success = Connection to the Neon Database Server disconneted successfully!
 
 # Error
-neon.error.pre_init.incompatible_version = Neon could not be filled up: Incompatible server version!
-neon.error.post_init.incompatible_version = Neon could not be lit up: Incompatible server version!
+neon.error.apploader.incompatible_version = Neon could not be filled up/lit up: Incompatible server version!
 
 # Warning
