- Migrated config component to shareable module - Removed local config component - Added environment value file to `NeonInternalResource` - Removed some unused field in `neon-shared` `build.gradle.kts` - Merged util module into shareable module - Added new code message for exception - Migrated `DataUtil` into shareable module - Added a new function to get resource directory path
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/neon-kotlin/neon-shared/src/main/resources/application/code-messages.properties
+++ b/neon-kotlin/neon-shared/src/main/resources/application/code-messages.properties
@@ -18,3 +18,6 @@ neon.info.database.db_disconnection_success = Connection to the Neon Database Se
 neon.error.apploader.incompatible_version = Neon could not be filled up/lit up: Incompatible server version!
 
 # Warning
+
+# Exception
+neon.exception.config_parse.line_number_error = Error while trying to get error line number from config file!
