- Optimized and resolved dependency issue for submodules - Folder & file relocation - Added a new resource type - Added 2 new exception type - Added database update script as Neon resource instance - Moved config component to shared library - Resolved folder generation by targeting the plugin instance to parent (Neon) - Added prefix name to some of the `GeneralModule` - Removed unused comment - Optimized `NeonDatabaseServer` initialization - Moved data source related class to the `neon-datasource` - Replaced database credential with environment values - Added `DatabaseStructureManager` to manage database structure - Removed `DatabaseController` and revamped into `DatabaseServerManager` to manage database server - Removed `database-config.yml` - Updated `ConfigProperty` to accept the exact datatype instead of type `Any` - Updated some of the code messages - Initialized `NeonAPIAdapter`
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/neon-kotlin/neon-shared/src/main/resources/application/code-messages.properties
+++ b/neon-kotlin/neon-shared/src/main/resources/application/code-messages.properties
@@ -1,4 +1,4 @@
-# Info
+# Neon Info
 neon.info.pre_load.start = Start filling up Neon......
 neon.info.pre_load.complete = Neon has been filled up!
 neon.info.post_load.start = Start lighting up Neon.....
@@ -9,15 +9,35 @@ neon.info.resource_manager.data_folder_init = Initializing data folder......
 neon.info.resource_manager.extension_init = Verifying and extracting extension......
 neon.info.resource_manager.extension_extract_failed = Missing extension source! Skipping extension extration for '%s' ......
 
+neon.info.appcontext.parent_plugin_check = Getting Neon status......
+
 neon.info.database.connecting_to_db_server = Establishing connection to Neon Database Server......
 neon.info.database.disconnecting_from_db_server = Disconnecting from Neon Database Server.....
 neon.info.database.db_connection_success = Connection to the Neon Database Server established successfully!
 neon.info.database.db_disconnection_success = Connection to the Neon Database Server disconneted successfully!
 
-# Error
-neon.error.apploader.incompatible_version = Neon could not be filled up/lit up: Incompatible server version!
+# Neon Error
+neon.error.apploader.neon_load_incompatible_version = Neon could not be filled up/lit up: Incompatible server version!
+neon.error.apploader.extension_load_incompatible_version = Error while trying to load %s: Incompatible server version!
 
-# Warning
+# Neon Warning
 
-# Exception
+# Neon Exception
 neon.exception.config_parse.line_number_error = Error while trying to get error line number from config file!
+neon.exception.apploader.required_plugin_not_found = Error while trying to load %s: Required plugin not found: %s
+
+# Neon Database Server Info
+neon_database_server.info.initialize_db_server = Initializing database server......
+neon_database_server.info.start_db_server = Starting database server......
+neon_database_server.info.start_db_server_success = Database server has started!
+neon_database_server.info.establish_db_connection = Establishing database connection......
+neon_database_server.info.establish_db_connection_success = Database connection has been established!
+neon_database_server.info.close_db_connection = Closing database connection......
+neon_database_server.info.close_db_connection_success = Database connection has been closed!
+neon_database_server.info.update_db_structure = Updating database structure......
+neon_database_server.info.update_db_structure_success = Database structure has been updated!
+
+# Neon Database Server Error
+neon_database_server.error.db_driver_not_found = Error while trying to initialize database server! Missing HSQLDB driver!
+neon_database_server.error.db_server_start_failed = Error while trying to start database server! Please perform a full server restart!
+
