--- a/neon-kotlin/neon-extension/neon-database-server/src/main/plugin.yml
+++ b/neon-kotlin/neon-extension/neon-database-server/src/main/plugin.yml
@@ -3,5 +3,5 @@ author: ICities
 version: '1.0'
 api-version: '1.17'
 depend: [Neon]
-main: com.islandstudio.neon.NeonDatabaseServer
+main: com.islandstudio.neon.ext.neondatabaseserver.NeonDatabaseServer
 description: Database server for Neon plugin. [Require Neon plugin in order to work.]
