- Updated code messages - Added logger filter nag message about using `JavaPlugin` Logger - Resolved some typo - Resolved an issue where Liquibase could not set back `autoCommitMode` - Ensuring server init task complete using `joinAll` - Reduced database update summary log
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/neon-kotlin/neon-shared/src/main/resources/application/code-messages.properties
+++ b/neon-kotlin/neon-shared/src/main/resources/application/code-messages.properties
@@ -9,7 +9,7 @@ neon.info.resource_manager.data_folder_init = Initializing data folder......
 neon.info.resource_manager.extension_init = Verifying and extracting extension......
 neon.info.resource_manager.extension_extract_failed = Missing extension source! Skipping extension extration for '%s' ......
 
-neon.info.appcontext.parent_plugin_check = Getting Neon status......
+neon.info.appcontext.parent_plugin_check = Ensuring Neon is loaded......
 
 neon.info.database.connecting_to_db_server = Establishing connection to Neon Database Server......
 neon.info.database.disconnecting_from_db_server = Disconnecting from Neon Database Server.....
