- Optimized to way to handle action result - Added new action statuses - Initialize new command handling implementation - Updated field in `CreateRoleRequestDTO` - Updated shutdown operation for database server - Added clear checksum to liquibase to resolve changelog script config - Renamed data key instance for `PlayerSessionContainer` - Added default value to update audit info if no name provided - Added permission & role permission api - Updated create/update player profile will return the player profile entity - Updated assign/unassign role - Updated role repository - Updated role service - Updated player profile api - Added `PlayerSessionManager` - Added `PlayerSession` data class to store player session data - Updated role api - Removed `assignedPlayerCount` `from RoleEntity` - Added `RoleManager`
Signed-off-by: ICitiesz <69842262+ICitiesz@users.noreply.github.com>

--- a/neon-kotlin/src/main/resources/application/datakey/general-data-keys.properties
+++ b/neon-kotlin/src/main/resources/application/datakey/general-data-keys.properties
@@ -25,3 +25,5 @@ nPainting.property.header.key = neon_npainting
 nPainting.property.imageName.key = neon_npainting_image_name
 nPainting.property.position.key = neon_npainting_position
 nPainting.property.renderId.key = neon_npainting_render_id
+
+neon.player.player_session = player_session
